Mayor refactor in the way to get fog of war / visibility per empire.